force-app/main/default/objects/MUSW__PRTANY_QUERY__c/MUSW__PRTANY_QUERY__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Internal - queries used by the printer package to retrieve content</description>
    <label>Printer Query</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printer Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>