force-app/main/default/objects/MUSW__PRTANY_QUERY__c/fields/MUSW__Filter__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Filter__c</fullName>
    <description>The where condition appended to the resulting SOQL query</description>
    <label>Filter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>