force-app/main/default/objects/MUSW__PRTANY_QUERY__c/fields/MUSW__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>