force-app/main/default/objects/MUSW__PRTANY_QUERY__c/fields/MUSW__Sequence__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>