force-app/main/default/objects/MUSW__PRTANY_QUERY__c/fields/MUSW__Single_Row_Selection_Fields__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Single_Row_Selection_Fields__c</fullName>
    <label>Single Row Selection Fields</label>
    <type>TextArea</type>
</CustomField>